- update status - canvas shift in simulate and test modes